--- a/css/style.css
+++ b/css/style.css
@@ -290,7 +290,7 @@ i {
   order: 0;
   flex: 0 1 auto;
   align-self: auto;
-  width: 95%;
+  max-width: 600px;
   display: flex;
   justify-content: space-between;
   background-color: #fff;
@@ -339,9 +339,6 @@ i {
     .popup-content .close:hover, .popup-content .close:focus {
       color: #000;
       cursor: pointer; }
-  @media screen and (min-width: 1024px) {
-    .popup-content {
-      width: 60%; } }
 
 .hide {
   display: none; }
