--- a/css/style.css
+++ b/css/style.css
@@ -32,7 +32,7 @@ img {
   @media screen and (min-width: 768px) {
     .header-menu {
       display: flex;
-      justify-content: center;
+      justify-content: flex-end;
       align-items: center;
       width: 65%; } }
   .header-menu a:hover {
@@ -199,7 +199,8 @@ figcaption {
   .go-to-page ul {
     display: flex;
     justify-content: center;
-    font-size: 0; }
+    font-size: 0;
+    padding: 0; }
   .go-to-page li {
     padding: 0 2px; }
   @media screen and (min-width: 1024px) {
