--- a/scss/style.scss
+++ b/scss/style.scss
@@ -40,7 +40,7 @@ img {
     display: none;
     @media screen and (min-width: 768px) {
         display: flex;
-        justify-content: center;
+        justify-content: flex-end;
         align-items: center;
         width: 65%;
     }
@@ -243,6 +243,7 @@ figcaption {
         display: flex;
         justify-content: center;
         font-size: 0;
+        padding: 0;
     }
     li {
         padding: 0 2px;
