--- a/scss/style.scss
+++ b/scss/style.scss
@@ -35,7 +35,6 @@ img {
 }
 
 // header
-
 .header-menu {
     display: none;
     @media screen and (min-width: 768px) {
@@ -43,11 +42,6 @@ img {
         justify-content: flex-end;
         align-items: center;
         width: 65%;
-    }
-    a {
-        &:hover {
-            border-bottom: 3px solid #f7df59;
-        } 
     }
     @media screen and (min-width: 1024px) {
         justify-content: flex-end;
@@ -98,7 +92,6 @@ h1 {
 } 
 
 // main
-
 main {
     background-color: #f6f6f6;
 }
@@ -336,7 +329,6 @@ i {
 }
 
 // modal
-
 .popup-wrap {
     display: flex;
     flex-direction: row;
@@ -344,7 +336,7 @@ i {
     justify-content: center;
     align-content: stretch;
     align-items: center;
-    position: absolute;
+    position: fixed;
     left: 0;
     right: 0;
     top: 0;
@@ -442,7 +434,6 @@ i {
 }
 
 //  fancybox
-
 .inner-modal {
     display: flex;
     li {
@@ -732,17 +723,13 @@ nav {
     @media screen and (min-width: 768px) {
         ul {
             display: flex;
-        font-size: 0;
-        list-style: none;
-        padding: 0;
+            font-size: 0;
+            list-style: none;
+            padding: 0;
         }
         li {
-            .active {
-                border-bottom: 3px solid #f7df59;
-                &:hover {
-                    border: none;
-                }
-            }
+            display: inline-block;
+            text-align: center;
         }
         a { 
             display: inline-block;
@@ -753,7 +740,9 @@ nav {
             font-weight: 300;
                 &:hover {
                     color: #838383;
-                }
+                    margin-bottom: -3px;
+                    border-bottom: 3px solid #f7df59;
+                } 
             @media screen and (min-width: 1024px) {
                 padding: 11px 10px;
                 font-size: 18px;
